--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Link Redirection with EJS</title>
+    <title>XSS Attack</title>
     <style>
       body {
         background-color: black;
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body>
-    <h1>Project XSS</h1>
+    <h1>XSS Attack</h1>
 
     <h2>Choose a page</h2>
     <ul>
