--- a/views/multisecond.ejs
+++ b/views/multisecond.ejs
@@ -69,7 +69,7 @@
       <img
         alt="Acunetix Acuart logo"
         height="200"
-        src="http://testphp.vulnweb.com/images/logo.gif"
+        src="https://images.squarespace-cdn.com/content/v1/5e949a92e17d55230cd1d44f/65963c6a-a64d-44ba-bef1-0d15bc5f25dc/Hello201x1.png"
         width="200"
       />
       <div class="title">
