--- a/views/multisecond.ejs
+++ b/views/multisecond.ejs
@@ -62,14 +62,20 @@
         background-color: #f0f0f0;
         font-size: 12px;
       }
+      .logo {
+        background-size: cover;
+        object-fit: contain;
+        object-position: center;
+      }
     </style>
   </head>
   <body class="bg-white text-black">
     <div class="header">
       <img
+        class="logo"
         alt="Acunetix Acuart logo"
         height="200"
-        src="https://images.squarespace-cdn.com/content/v1/5e949a92e17d55230cd1d44f/65963c6a-a64d-44ba-bef1-0d15bc5f25dc/Hello201x1.png"
+        src="https://logon-int.com/wp-content/uploads/2020/06/acu-logo-01-1.png"
         width="200"
       />
       <div class="title">
